src/test/ui/specialization/defaultimpl/specialization-no-default.stderr
error[E0520]: `foo` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/specialization-no-default.rs:22:5
   |
LL | / impl<T> Foo for T {
LL | |     fn foo(&self) {}
LL | |     fn bar(&self) {}
LL | | }
   | |_- parent `impl` is here
...
LL |       fn foo(&self) {}
   |       ^^^^^^^^^^^^^^^^ cannot specialize default item `foo`
   |
   = note: to specialize, `foo` in the parent `impl` must be marked `default`

error[E0520]: `bar` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/specialization-no-default.rs:25:5
   |
LL | / impl<T> Foo for T {
LL | |     fn foo(&self) {}
LL | |     fn bar(&self) {}
LL | | }
   | |_- parent `impl` is here
...
LL |       fn bar(&self) {}
   |       ^^^^^^^^^^^^^^^^ cannot specialize default item `bar`
   |
   = note: to specialize, `bar` in the parent `impl` must be marked `default`

error[E0520]: `T` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/specialization-no-default.rs:41:5
   |
LL | / impl<T> Bar for T {
LL | |     type T = u8;
LL | | }
   | |_- parent `impl` is here
...
LL |       type T = ();
   |       ^^^^^^^^^^^^ cannot specialize default item `T`
   |
   = note: to specialize, `T` in the parent `impl` must be marked `default`

error[E0520]: `baz` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/specialization-no-default.rs:61:5
   |
LL | / impl<T: Clone> Baz for T {
LL | |     fn baz(&self) {}
LL | | }
   | |_- parent `impl` is here
...
LL |       fn baz(&self) {}
   |       ^^^^^^^^^^^^^^^^ cannot specialize default item `baz`
   |
   = note: to specialize, `baz` in the parent `impl` must be marked `default`

error[E0520]: `redundant` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/specialization-no-default.rs:82:5
   |
LL | / impl<T: Clone> Redundant for T {
LL | |     fn redundant(&self) {}
LL | | }
   | |_- parent `impl` is here
...
LL |       fn redundant(&self) {}
   |       ^^^^^^^^^^^^^^^^^^^^^^ cannot specialize default item `redundant`
   |
   = note: to specialize, `redundant` in the parent `impl` must be marked `default`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0520`.
